# ChangeLog for media-libs/cogl
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/cogl/ChangeLog,v 1.22 2013/01/13 16:16:47 eva Exp $

  13 Jan 2013; Gilles Dartiguelongue <eva@gentoo.org> cogl-1.12.0-r1.ebuild,
  cogl-1.12.2.ebuild:
  Raise gobject-introspection dependency per bug #449228.

*cogl-1.12.2 (13 Jan 2013)

  13 Jan 2013; Gilles Dartiguelongue <eva@gentoo.org> -cogl-1.12.0.ebuild,
  +cogl-1.12.2.ebuild:
  Version bump.

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> cogl-1.12.0-r1.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> cogl-1.12.0-r1.ebuild:
  Add ~ia64, wrt bug #449220

*cogl-1.12.0-r1 (18 Dec 2012)

  18 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +cogl-1.12.0-r1.ebuild:
  Prefer gl over gles2 as the default driver, since that's what most users
  would want; thanks to Rafał Mużyło.

*cogl-1.12.0 (16 Dec 2012)

  16 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org> cogl-1.10.4.ebuild,
  +cogl-1.12.0.ebuild, +files/cogl-1.12.0-fix-experimental-doc-build.patch,
  metadata.xml:
  Version bump for gnome-3.6. Switch to global introspection USE flag.

  05 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org> cogl-1.10.4.ebuild:
  Accidentally set wrong subslot.

  05 Dec 2012; Alexandre Rostovtsev <tetromino@gentoo.org> cogl-1.8.2.ebuild,
  cogl-1.10.4.ebuild:
  Update to EAPI5 and enable subslots.

  10 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org> cogl-1.8.2.ebuild,
  -cogl-1.10.2.ebuild, cogl-1.10.4.ebuild,
  +files/cogl-1.10.4-cogl-clipping.xml.patch:
  Fix USE=doc build failure with libxslt-1.1.27 (bug #436308, thanks to
  bambucha14). Update license. Drop old.

*cogl-1.10.4 (17 Jul 2012)

  17 Jul 2012; Alexandre Rostovtsev <tetromino@gentoo.org> -cogl-1.10.0.ebuild,
  +cogl-1.10.4.ebuild:
  Version bump with various bugfixes. Skip tests for non-mesa opengl. Drop old.
