@@ -9,14 +9,14 @@ DIST cogl-1.12.2.tar.xz 1301108 SHA256 31971d4c6543c589f6fc49ab1724dfbdc7062c58a
 DIST cogl-1.8.2.tar.xz 1029304 SHA256 ec26fd90c4ba5643875b5f3a04b4ab14b24f0d618ba3d239d61e773c3e3ca8c7 SHA512 a09ee70d4baeac09382ef275394c475ff49d1a690bad6697e55a1de1de1777195becd479acac9ce347fd870c367c55e4376c90248e00e55396dafe258e60b402 WHIRLPOOL a8b90ea38526e5d1efb49d07c578c28789f304c85b73d4495d964301cf497fed143561852df602c422d1752dc6ef7220f924dc62554e1d69edb2e465a1286e65
 EBUILD cogl-1.10.4.ebuild 2696 SHA256 46b9a51282949afd60cf5f83d4c6d4a967253a824c97530ef00e4ea57028645b SHA512 da10efb4dd9f5931a88d7748431fb8da4c811aa219e3075c506d53789ba7062c7d5e903fed53f03eda1b9c26f151771445b5f552c6f468c842b3f972e7a02099 WHIRLPOOL 6d72b1d7f81d3323c8f13a734b34779909257f36e6655943115ae67510035c6963e1ba66f14cf052321863f290bbd8e72528db3346bdb841e9d676de665bc931
 EBUILD cogl-1.12.0-r1.ebuild 3071 SHA256 054d11209187b42c962adc388921b46b1e0433a932ba9035afba6af4f076ab80 SHA512 75ddf8a8099653b042445b3c9c874d6ef58bfaefed981327db7ebcbdb1b3d794905e0c3eae3a4e08e18beb04f3204510c2619ebdae89517dba68ef6c1b10f34c WHIRLPOOL 89f21dea3963d18a4aebc7cb27cd8336a173886df65bff3ff5bb4963caf418cfeece1dad0bf4aa60d63e1dbdda9f66a539c91517ce28e2cda560dd494af9d10c
-EBUILD cogl-1.12.2.ebuild 3003 SHA256 4b19508a9be96be2c3501ca31dc00ed2b2994ad3e2680678942b01a3bf645a71 SHA512 4d43fe0ce0ca4111fc0d87826656f7e2f6140acc31a574f0989306aae6123876befc5ee248f0ebc84024c0ac56fdff42dc89395bf294788aa6dbfc019d4f9a1e WHIRLPOOL 999d83602a6d9c33692489febe2fc1da22e0566aafd42db358d382d1460de5079ea3f4001ad25d73c8987f3adb462b994632e8b5e514d983b1ad3edcec1226aa
+EBUILD cogl-1.12.2.ebuild 3217 SHA256 b0722a909a3392d10e61ef1e1af2beb8785e509d6a12ea069ef8687737fb3e7e SHA512 7a2c36e4ab6abe96eb0ccd4b4069b72f6cc417ec43adad8ea58b48e38e4f20da414a211145bf6a3af73100bc6ab7c1d8da5812cce45b10d1ea72b76036b1dfe0 WHIRLPOOL c756009c93db67c352abbe086d8a24e4216539e8e55abee396c581238c64822ab5611797558a8c88c89f1ea6a77c175634f72ff0ba4e2a5eaed08f0e105999a9
 EBUILD cogl-1.8.2.ebuild 1812 SHA256 8bef9f9caca02a054d1e88c4ed82b408f086b4891c027dbfdbb6fda3bf54f6ac SHA512 06f4394aaef68f18a580590500733d1fe5e5449ddfd8574cb7c883d9f21a8dad990670c403e0c61706f68cb18e7e0a274142bb93a7964eaa0bb322bea9ca8ef8 WHIRLPOOL 96312cfcbffb886f7a5e8d9a095876fef669168bfd82ed88edaf53e956db106d05034c92c4b580489c9518683e006a4154dedf6e5f53a584a8e13ea4ea5a48f1
-MISC ChangeLog 3503 SHA256 b596705d24b5917b8bc04d4a1dc5e2adf0f2ead000bea4499b9dc849e656c639 SHA512 11a394dac4727ed7dfdc8d30481059098947d6312d9fd62330d910fad4911aaabed8df4c52a871e47bd255ac0deb058a3ca821e187fc151f80a336834c7b64f2 WHIRLPOOL 3c65408fcaf927be2981df3952e1101a82a8ad7b18ea4151c6780298ee778ad5798c7cdc83f571f5e0d692290770f46546397ed8ea816a0241917d7bb62e19ef
+MISC ChangeLog 3657 SHA256 036e09ffe5be342866e1c08148dbdf239118c446bde07ce37a1ca85918cc5682 SHA512 dfae5598d9dd0e961aa2f9bc5731a244960616f100f0bd3484842ca359a197a47f5878e32a10dfebd424cecad4e0bb4b81530dac7d50e068c45f74982484c85a WHIRLPOOL 88c17c1cc39b6504405b8c5325284454ba150c5a909f85754889d61e7f32cf9605e4d0b001170ba1e445ee769edd116a9ff57f2511098fe26c2e9c4c22e4d02e
 MISC metadata.xml 327 SHA256 36794b496b8dd6ed4b11b365bf371c02bfc56f9649a6310429412d76c7dcf81a SHA512 1de5c9ae58ae76a8ebe747d7c26254c44cfba86d7b1b9fc02e293a9fb5ab37a57d0ee032848bc4c5ad724b3816d04fbcd3f6e442101f01bbba3c5aa860863dd0 WHIRLPOOL b9b8ba95849b1c86be5a300cf98ede297d4f6bfa6712c675db843fb558c3e4c8831fa5193cadf47736783a7121e97aaed5ff7a1cf07e401c14146c0f027c467c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDy3fAACgkQ1fmVwcYIWAYWDgCfTu6Kwua2/qugiBBBheAlQy2y
-tVAAnAvdHgk9WPiVgqBRZnbCu5479KR4
-=78Br
+iEYEAREIAAYFAlDzNxYACgkQ1fmVwcYIWAYYkgCdF0Ig05YH+3sGH9U6eDHwb3k1
+o5QAoLNY6puVnoJKwHT/lbU7fp+N3oup
+=HqPx
 -----END PGP SIGNATURE-----
