@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/cogl
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/cogl/ChangeLog,v 1.22 2013/01/13 16:16:47 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/cogl/ChangeLog,v 1.23 2013/01/13 22:37:09 eva Exp $
+
+  13 Jan 2013; Gilles Dartiguelongue <eva@gentoo.org> cogl-1.12.2.ebuild:
+  Actually make gtk-doc installation work. Needs latest gnome2.eclass changes.
 
   13 Jan 2013; Gilles Dartiguelongue <eva@gentoo.org> cogl-1.12.0-r1.ebuild,
   cogl-1.12.2.ebuild:
